[metadata]
name = pagerduty_trigger
summary = Trigger Pagerduty alerts class
description-file =
    README.md
author = Daniel Wallace
author-email = danielwallace@gtmanfred.com
home-page = https://github.com/gtmanfred/pagerduty_trigger/

[files]
packages=
    pagerduty_trigger

[wheel]
universal = 1

[flake8]
max-line-length = 119
